tests/fixtures/invalid/bytes_rshift_dict.py
# Cannot right shift Bytes and Dict[str, int]
x: bytes = b"hello" >> {"a": 1}
